2014-06-01  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c, x.h: x_cmap_get_closest_color() caches 512 + 64 pixels.

	* x_screen_manager.c: get_picture_data() for background terminals is set
	  when they are detached from the window system.

	* ml_term.[ch]: ml_term_t::user_data and ml_term_{get|set}_user_data() are added.

2014-05-29  Araki Ken  <arakiken@users.sf.net>

	* mkf/configure.in, mkf/Makefile.in: If --disable-dl-table is specified,
	  'make' isn't executed under libtbl/.

	* configure.in, main/Makefile.in: XWINDOW_OBJ_SUFFIX => MAIN_OBJ_SUFFIX

	* version.h.in: 3.3.5 -> 3.3.5post

2014-05-25  Araki Ken  <arakiken@users.sf.net>

	* 3.3.6 released.
	  (tag "rel-3_3_6")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.6.

	* x_transparent_sample_sb_view.c:
	  x_transparent_sample2_sb_view_new() => x_transparent_sample_sb_view_new()

	* x_sample_sb_view.c: x_sample2_sb_view_new() => x_sample_sb_view_new()

2014-05-25  Araki Ken  <arakiken@users.sf.net>

	* ml_term.c: ml_screen_visual() is called in ml_term_set_modified_*()
	  only if ml_screen_logical() succeeded, because ml_term_set_modified_*()
	  can be called in logical context. (see flush_scroll_cache() in x_screen.c)

	* x_draw_str.c: The position of drawing drcs glyphs is fixed.

	* ml_line.[ch], ml_edit.c, ml_edit_scroll.c, ml_model.c:
	  - ml_line_copy_line() -> ml_line_copy()
	  - ml_line_swap() is added, and ml_line_copy_line() in copy_lines() in
	    ml_edit_scroll.c is replaced by ml_line_swap().

	* win32/x_xic.c: The focused window alone can call ImmSetCompositionWindow().

	* README, README.ja: Minor fixes.

2014-05-23  Araki Ken  <arakiken@users.sf.net>

	* x_font_config.c: The change at 2014-05-22 is reverted.

2014-05-23  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java: unifont.pcf which is older than the apk file
	  is overwritten.

2014-05-22  Araki Ken  <arakiken@users.sf.net>
