@@ -66,5 +66,7 @@ int  kik_compare_str( const char *  str1 , const char *  str2) ;
 
 char *  kik_str_replace( const char *  str , const char *  orig , const char *  new) ;
 
+char *  kik_str_unescape( const char *  str) ;
+
 
 #endif
