@@ -195,6 +195,8 @@ main_loop_init(
 	kik_conf_add_opt( conf , '\0' , "keepalive" , 0 , "ssh_keepalive_interval" ,
 		"interval seconds to send keepalive. [0 = not send]") ;
 #endif
+	kik_conf_add_opt( conf , '\0' , "metaprefix" , 0 , "mod_meta_prefix" ,
+		"prefix characters in pressing meta key if mod_meta_mode = esc") ;
 
 	if( ! kik_conf_parse_args( conf , &argc , &argv))
 	{
@@ -371,6 +373,11 @@ main_loop_init(
 	}
 #endif
 #endif
+
+	if( ( value = kik_conf_get_value( conf , "mod_meta_prefix")))
+	{
+		x_set_mod_meta_prefix( kik_str_unescape( value)) ;
+	}
 
 	x_main_config_init( &main_config , conf , argc , argv) ;
 
